--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.username=root
 
 # Senha do banco de dados
 spring.datasource.password=1234
+
+spring.thymeleaf.node=HTML
+spring.thymeleaf.cache=FALSE
