--- a/demo/.hintrc
+++ b/demo/.hintrc
@@ -27,6 +27,12 @@
       {
         "button-name": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "select-name": "off"
+      }
     ]
   }
 }
