--- a/demo/.hintrc
+++ b/demo/.hintrc
@@ -31,7 +31,8 @@
     "axe/forms": [
       "default",
       {
-        "select-name": "off"
+        "select-name": "off",
+        "label": "off"
       }
     ]
   }
