--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.datasource.password=1234
 
 spring.thymeleaf.node=HTML
 spring.thymeleaf.cache=FALSE
+
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
