--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 
 # Acesso ao banco de dados
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pethoteis
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pethoteis2
 
 # Usuário do banco de dados
 spring.datasource.username=root
